# opencv

cmake/: OpenCVDetectNodejs.cmake
modules/nodejs/: CMakeLists.txt  nodejs_loader.cmake  standalone.cmake
modules/nodejs/bindings/: CMakeLists.txt
modules/nodejs/test/: CMakeLists.txt
